package com.vpon.trade;

option optimize_for = SPEED;

enum IMPRESSIONTYPE {
  UNKNOWN_IMPRESSIONTYPE  = 0;
  BLANK                   = 1;
  DEFAULT                 = 2;
  PSA                     = 3;
  KEPT                    = 4;
  RESOLD                  = 5;
  RTB                     = 6;
  EXTERNAL_IMPRESSION     = 7;
  EXTERNAL_CLICK          = 8;
}

enum DEALTYPE {
  NO_PAYMENT  = 0;
  CPM         = 1;
  CPC         = 2;
  CPA         = 3;
}

enum BIDLOSTREASON {
  UNKNOWN_BIDLOSTREASON     = 0;
  LOW_PRICE                 = 1;
  TIMEOUT                   = 2;
  ADM_INVALID               = 3;
  RESPONSE_INVALID          = 4;
  BID_ID_INVALID            = 5;
  BID_PRICE_INVALID         = 6;
  BID_WIN_NOTICE_INVALID    = 7;
  BID_SEAT_INVALID          = 8;
  BID_ADM_TITLE_INVALID     = 9;
  BID_AUCTION_TYPE_INVALID  = 10;
  NOT_BIDDING               = 22;
}

message BidResult {
  required string         dsp_id           = 1;
  required BIDLOSTREASON  bid_lost_reason  = 2;
  optional double         bid_price        = 3;
  optional string         currency         = 4;
  optional DEALTYPE       deal_type        = 5;
  optional string         dsp_group_id     = 6;
}

message Rate {
  required int32 exchange_rate_version          = 1;
  required int32 publisher_ssp_tax_rate_version = 2;
  required int32 dsp_ssp_tax_rate_version       = 3;
}

message Placement {
  required string   placement_id  = 1;
  required string   platform_id   = 2;
  required double   bid_floor     = 3;
  required string   bid_floor_cur = 4;
}

message Media {
  enum MEDIATYPE {
    UNKNOWN_MEDIATYPE       = 0;
    BANNER                  = 1;
    INTERSTITIAL            = 2;
  }
  enum SUPPLYTYPE {
    UNKNOWN_SUPPLYTYPE      = 0;
    WEB_PLACEMENTS          = 1;
    MOBILE_WEB_PLACEMENTS   = 2;
    APPS_PLACEMENTS         = 3;
    TV_PLACEMENTS           = 4;
  }
  enum ADPOSITIONTYPE {
    UNKNOWN_ADPOSITIONTYPE  = 0;
    ABOVE_FOLD              = 1;
    DEPRECATED              = 2;
    BELOW_FOLD              = 3;
    HEADER                  = 4;
    FOOTER                  = 5;
    SIDEBAR                 = 6;
    FULLSCREEN              = 7;
  }
  enum IFRAMESTATETYPE {
    UNKNOWN_IFRAMESTATETYPE = 0;
    NO_IFRAME               = 1;
    SAME_DOMAIN_IFRAME      = 2;
    CROSS_DOMAIN_IFRAME     = 3;
  }

  required MEDIATYPE       media_type    = 1;
  required int32           media_height  = 2;
  required int32           media_width   = 3;
  required SUPPLYTYPE      supply_type   = 4;
  optional ADPOSITIONTYPE  ad_position   = 5;
  required string          media_format  = 6;
  optional IFRAMESTATETYPE iframe_state  = 7;
}

message Site {
  enum PROTOCOLTYPE {
    UNKNOWN_PROTOCOLTYPE  = 0;
    HTTP                  = 1;
    HTTPS                 = 2;
  }
  required string       site_domain   = 1;
  required PROTOCOLTYPE site_protocol = 2;
}

message App {
  required string app_id = 1;
}

message Device {
  message DeviceTime {
    optional int64 client_timestamp = 1;
    optional int32 client_timezone = 2;
  }
  required string     user_agent              = 1;
  required string     client_ip               = 2;
  required string     language                = 3;
  optional int32      screen_available_height = 4;
  optional int32      screen_available_width  = 5;
  optional int32      screen_height           = 6;
  optional int32      screen_width            = 7;
  optional double     screen_density          = 8;
  optional string     connection_type         = 9;
  optional string     telephony_type          = 10;
  optional string     mobile_country_code     = 11;
  optional string     mobile_network_code     = 12;
  optional DeviceTime device_time             = 13;
}

message SDK {
  required string version = 1;
}

message User {
  enum GENDERTYPE {
    UNKNOWN_GENDERTYPE  = 0;
    MALE                = 1;
    FEMALE              = 2;
  }
  optional int32      age    = 1;
  optional GENDERTYPE gender = 2;
}

message BidWinner {
  required string   dsp_id       = 1;
  required double   bid_price    = 2;
  required double   clear_price  = 3;
  required DEALTYPE deal_type    = 4;
  required string   currency     = 5;
  optional string   dsp_group_id = 6;
}

message TradeLog {
  required string         bid_id          = 1;
  required int64          bid_timestamp   = 2;
  required IMPRESSIONTYPE impression_type = 3;
  required Placement      placement       = 4;
  required Media          media           = 5;
  required Device         device          = 6;
  required Rate           rate            = 7;
  optional User           user            = 8;
  optional Site           site            = 9;
  optional App            app             = 10;
  optional BidWinner      winner          = 11;
  repeated BidResult      losers          = 12;
  optional SDK            sdk             = 13;
}

message Impression {
  required string         impression_id         = 1;
  required IMPRESSIONTYPE impression_type       = 2;
  required int64          impression_timestamp  = 3;
  required int64          bid_timestamp         = 4;
  required string         bid_id                = 5;
  required string         clear_price           = 6;
  required string         dsp_id                = 7;
  required DEALTYPE       deal_type             = 8;
  required Placement      placement             = 9;
  required Media          media                 = 10;
  required Device         device                = 11;
  required Rate           rate                  = 12;
  optional User           user                  = 13;
  optional Site           site                  = 14;
  optional App            app                   = 15;
  optional string         dsp_group_id          = 16;
}

message Click {
  required string         click_id              = 1;
  required IMPRESSIONTYPE impression_type       = 2;
  required int64          click_timestamp       = 3;
  required int64          bid_timestamp         = 4;
  required string         bid_id                = 5;
  required string         clear_price           = 6;
  required string         dsp_id                = 7;
  required DEALTYPE       deal_type             = 8;
  required Placement      placement             = 9;
  required Media          media                 = 10;
  required Device         device                = 11;
  required Rate           rate                  = 12;
  optional User           user                  = 13;
  optional Site           site                  = 14;
  optional App            app                   = 15;
  optional string         dsp_group_id          = 16;
}

message Event {
  enum EVENTTYPE {
    TRADELOG    = 1;
    IMPRESSION  = 2;
    CLICK       = 3;
  }
  required EVENTTYPE  event_type  = 1;
  required string     event_key   = 2;
  optional TradeLog   trade_log   = 3;
  optional Impression impression  = 4;
  optional Click      click       = 5;
}